# m133

./: .gitignore  M130_MIGRATION_PLAN_NO_PX4.md  M130_SYSTEM_ARCHITECTURE.md  MHE_MPC_ACADOS_INTEGRATION.md  N_MHE_VERIFICATION.md  PHONE_PERFORMANCE_FACTORS.md  PIL_SIGSEGV_FIX.md  PROMPT_INJECTION_REPORT.md  README.md  SIMULATION_RESULTS_AFTER_FIX.md  SIMULATION_RESULTS_ALL_FIXES.md  SITL_BUILD_STATE.md  SITL_RUN_STATE.md  SITL_VS_STANDALONE_COMPARISON.md  WORK_CONTEXT_NOTES.md  acados_integration_guide.md  aero_coeffs_errors_report.md  fin_deflection_errors_report.md  hil_sim_vs_px4.md  m130_autopilot.py  m130_guidance.py  m130_mhe_ocp.json  mhe_estimation_guide.md  rocket_design_workbook_v8_enhanced.html  roll_aero_coeffs_errors_report.md  run_sim2.sh  الاوامر
6DOF_v4_pure/: m130_mhe_ocp.json  requirements.txt  (+3 more)
AndroidApp/app/src/main/cpp/: CMakeLists.txt  android_uorb_publishers.cpp  android_uorb_publishers.h  board_config.h  gps_usb_ubx.cpp  gps_usb_ubx.h  mavlink_pty_usb_bridge.cpp  mavlink_pty_usb_bridge.h  mavlink_tcp_bridge.cpp  mavlink_tcp_bridge.h  native_sensor_reader.cpp  native_sensor_reader.h  px4_boardconfig.h  px4_jni.cpp  servo_usb_output.cpp  servo_usb_output.h  shared_sensor_data.h
AndroidApp/app/src/main/cpp/PX4-Autopilot/: SITL_DataFlow_Report.md  etc  parameters.bson
AndroidApp/app/src/main/cpp/PX4-Autopilot/ROMFS/px4fmu_common/init.d/: CMakeLists.txt  rc.rocket_apps  rc.rocket_defaults  rc.vehicle_setup
AndroidApp/app/src/main/cpp/PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/: rcS
AndroidApp/app/src/main/cpp/PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 22003_m130_rocket_mpc  22003_m130_rocket_mpc.post  CMakeLists.txt
AndroidApp/app/src/main/cpp/PX4-Autopilot/ROMFS/px4fmu_common/init.d/airframes/: 22004_m130_rocket_mpc_hitl  22005_m130_rocket_mpc_real  CMakeLists.txt
AndroidApp/app/src/main/cpp/PX4-Autopilot/Tools/simulation/gz/models/rocket/: model.config  model.sdf
AndroidApp/app/src/main/cpp/PX4-Autopilot/Tools/simulation/gz/models/rocket_base/: model.config  model.sdf
AndroidApp/app/src/main/cpp/PX4-Autopilot/Tools/simulation/gz/worlds/: default.sdf
AndroidApp/app/src/main/cpp/PX4-Autopilot/boards/cuav/x7pro/: default.px4board
AndroidApp/app/src/main/cpp/PX4-Autopilot/boards/micoair/h743/: default.px4board
AndroidApp/app/src/main/cpp/PX4-Autopilot/boards/micoair/h743/init/: rc.board_defaults
AndroidApp/app/src/main/cpp/PX4-Autopilot/boards/px4/sitl/: default.px4board
AndroidApp/app/src/main/cpp/PX4-Autopilot/cmake/: px4_git.cmake
AndroidApp/app/src/main/cpp/PX4-Autopilot/msg/: CMakeLists.txt  RocketGncStatus.msg
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/ins/sbgecom/sbgECom/src/: sbgEComVersion.h
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/uavcan/libdronecan/libuavcan/include/dsdlc_generated/root_ns_a/: A.hpp  B.hpp  Deep.hpp  Empty.hpp  EmptyMessage.hpp  EmptyService.hpp  MavlinkMessage.hpp  NestedInUnion.hpp  NestedMessage.hpp  ReportBackSoldier.hpp  StringService.hpp  UnionTest.hpp  UnionTest4.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/uavcan/libdronecan/libuavcan/include/dsdlc_generated/root_ns_b/: ServiceWithEmptyRequest.hpp  ServiceWithEmptyResponse.hpp  SuperIntelligentShadeOfBlue.hpp  T.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/uavcan/libdronecan/libuavcan/include/dsdlc_generated/uavcan/: CoarseOrientation.hpp  Timestamp.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/uavcan/libdronecan/libuavcan/include/dsdlc_generated/uavcan/navigation/: GlobalNavigationSolution.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/uavcan/libdronecan/libuavcan/include/dsdlc_generated/uavcan/protocol/: AccessCommandShell.hpp  CANIfaceStats.hpp  DataTypeKind.hpp  GetDataTypeInfo.hpp  GetNodeInfo.hpp  GetTransportStats.hpp  GlobalTimeSync.hpp  HardwareVersion.hpp  NodeStatus.hpp  Panic.hpp  RestartNode.hpp  SoftwareVersion.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/drivers/xqpower_can/: CMakeLists.txt  Kconfig  XqpowerCan.cpp  XqpowerCan.hpp  fdcan_regs.h  xqpower_can_params.c
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/lib/version/: version.c
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/commander/: Commander.cpp  commander_params.c
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/commander/failure_detector/: failure_detector_params.c
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/ekf2/: module.yaml  params_accel_bias.yaml  params_barometer.yaml  params_gnss.yaml  params_gyro_bias.yaml
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/logger/: logged_topics.cpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_receiver.cpp  mavlink_receiver.h  module.yaml
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/mavlink/streams/: DEBUG_FLOAT_ARRAY.hpp
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/navigator/: geofence_params.c
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/rocket_mpc/: CMakeLists.txt  Kconfig  RocketMPC.cpp  RocketMPC.hpp  los_guidance.cpp  los_guidance.h  mhe_estimator.cpp  mhe_estimator.h  mpc_controller.cpp  mpc_controller.h  rocket_mpc_params.c  sensor_bridge.cpp  sensor_bridge.h
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/simulation/gz_plugins/optical_flow/: optical_flow.cmake
AndroidApp/app/src/main/cpp/PX4-Autopilot/src/modules/simulation/simulator_mavlink/: SimulatorMavlink.cpp
AndroidApp/app/src/main/cpp/include/acados/blasfeo/include/: blasfeo_target.h
AndroidApp/app/src/main/cpp/m130_mpc/: acados_solver_m130_rocket.h
c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver_m130_rocket.h  acados_solver_m130_mhe.c  acados_solver_m130_rocket.c  main_sim_m130_mhe.c
c_generated_code/build_arm64/: Makefile
c_generated_code/m130_mhe_cost/: m130_mhe_cost_y_0_hess.c  m130_mhe_cost_y_fun.c  m130_mhe_cost_y_hess.c
c_generated_code/m130_mhe_model/: m130_mhe_expl_ode_fun.c  m130_mhe_model.h
c_generated_code/m130_rocket_model/: m130_rocket_expl_vde_adj.c  m130_rocket_expl_vde_forw.c
(+429 files in other folders)
